# dotweaver

./: .gitignore  CMakeLists.txt  Containerfile.dev  LICENSE  README.md  go.mod.yml  io.github.ledif.dotweaver.desktop  io.github.ledif.dotweaver.yml  justfile  modules.txt  org.dotweaver.yml  org.kde.kchezmoi.yml  resources.qrc  selinux.conf
src/: CMakeLists.txt  chezmoiservice.cpp  chezmoiservice.h  configeditor.cpp  configeditor.h  dataviewer.cpp  dataviewer.h  dotfilemanager.cpp  dotfilemanager.h  filetab.cpp  filetab.h  logger.cpp  logger.h  logviewer.cpp  logviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  org.dotweaver.desktop  org.kde.kchezmoi.desktop  statusbar.cpp  statusbar.h
src/ui/: dotweaverui.rc  kchezmoi.xml
tests/: CMakeLists.txt  test_chezmoiservice.cpp  test_dotfilemanager.cpp
